@@ -1,20 +1,28 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>ant</groupId>
-  <artifactId>ant</artifactId>
+ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
+     <groupId>com.test</groupId>
+  <artifactId>ant.java</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>Ant</name>
+  <packaging>jar</packaging>
+
+  <name>com.test.Ant</name>
   <url>http://maven.apache.org</url>
   
-  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+ 
+ 
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
  <dependencies>
  <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>3.14.0</version>
-</dependency>
+    <scope>test</scope>
+ </dependency>
   <!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
@@ -26,14 +34,19 @@
 <dependency>
     <groupId>br.eti.kinoshita</groupId>
     <artifactId>testlink-java-api</artifactId>
-    <version>1.9.16-1</version>
+    <version>1.9.3-2</version>
 </dependency>
+
 <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
 <dependency>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-dependency-plugin</artifactId>
     <version>3.1.1</version>
+    <scope>test</scope>
 </dependency>
+ 
+
+
 
 
 <!-- https://mvnrepository.com/artifact/org.apache.ant/ant-junit -->
@@ -43,24 +56,85 @@
     <version>1.10.5</version>
     <scope>test</scope>
 </dependency>
-
+<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-
-  <build>
+ <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
+     <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.16</version>
+                
+                <configuration>
+                <includes>
+                
+                <include>Ant*Test</include>
+                </includes>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+            
+   <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.18.1</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <forkCount>3</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <includes>
+                                <includesFile>com.test.Ant*Test</includesFile>
+                            </includes>
+                        </configuration>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+    <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.18.1</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <forkCount>3</forkCount>
+                            <reuseForks>true</reuseForks>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                            <testFailureIgnore>true</testFailureIgnore>
+                            <includes>
+                                <includesFile>**/*Test.java</includesFile>
+                            </includes>
+                        </configuration>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+ </plugins>        
+                   
+               
       
+    
+
+ 
+     
+
   
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-   
-   
- </plugins>
-  </build>
+ </build>
 </project>
